src/objects/SBQQ__QuoteTemplate__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FooterContentExternalId__c</fullName>
        <formula>SBQQ__FooterContent__r.ExternalId__c</formula>
        <label>FooterContentExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderContentExternalId__c</fullName>
        <formula>SBQQ__HeaderContent__r.ExternalId__c</formula>
        <label>HeaderContentExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>